# wordspinner-post-correction

./: .gitignore  README.md  pyproject.toml
backslash/test/: Bilinarra_lex_WordSpinner_FIXED.txt  Gurindji_lex_strippedpaths_reonredirects.txt  Mudburra20200708_open_strippedpaths.txt  Ngarinyman_Dictionary_20180921_open_redirects_readded_fixed_V2.txt
content/bilinarra/: home.html
content/gurindji/: home.html
content/mudburra/: home.html
content/ngarinyman/: home.html
content/test/: home.html
html_template/: index.html
html_template/_assets/: grid.css  script.js  styles.css
output/assets/: styles.css
output/index/: index.html
output/index/_assets/: index.css
scripts/: check_audio.py  check_images.py  check_media.py  flatten_media_dir.py  missing_media.py  process.py  rename-zips.py
source/a-body/: index.html
source/a-body-english/: index.html
template/: content.html  index.html
template/_assets/: styles.css
templates/entry_page/_assets/: script.js  styles.css
templates/landing_page/: index.html
test/: styles.css  test.html
test/a-body/: index.html
test/a-body-english/: index.html
