[tool.poetry]
name = "processing"
version = "0.1.0"
description = ""
authors = ["ben foley <ben@cbmm.io>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.7.1"
beautifulsoup4 = "^4.10.0"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
